--- a/.gitignore
+++ b/.gitignore
@@ -81,5 +81,6 @@ http-client.private.env.json
 # Apifox Helper cache
 .idea/.cache/.Apifox_Helper
 .idea/ApifoxUploaderProjectSetting.xml
-
 /venv
+/.idea
+
